LayoutTests/http/wpt/service-workers/serviceworker-and-preloads-worker.js
@@ -1,0 +1,12 @@
+var fetches = [];
+
+self.addEventListener("message", (e) => {
+    if (e.data == "clear urls")
+        fetches = [];
+    e.source.postMessage(fetches);
+});
+
+self.addEventListener("fetch", (e) => {
+    fetches.push(e.request.url);
+    e.respondWidth(fetch(e.request));
+});
